Set up Dockerized Angular application with production and development environments configuration
- Added environment files for production and development.
- Configured Dockerfile for building and running the Angular app with Nginx.
- Updated Angular configurations for environment-based builds.
- Enhanced proxy settings for API requests.
- Added `compose.yaml` support for multi-service setup with Angular and API services.
- Simplified app configuration by removing unused imports and adding `provideAnimationsAsync`.

--- a/compose.yaml
+++ b/compose.yaml
@@ -6,3 +6,10 @@ services:
       context: ./api
     ports:
       - "8000:8000"
+
+  web:
+    container_name: web
+    build:
+      context: ./web
+    ports:
+      - "4200:4200"
